--- a/src/templates/cars-list.hbs
+++ b/src/templates/cars-list.hbs
@@ -1,4 +1,5 @@
-<ul class="cars-list">
+<button id="btn" type="button">Сортувати за ціною</button>
+<ul class="cars">
   {{#each cars}}
     <li class="cars-item">
       <h2 class="mark">{{this.mark}}</h2>
